--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Github editor test</title>
 </head>
 <body>
-    <h3> Hello from github</h3>
+    <h3> Hello from github an edit</h3>
 
 </body>
 </html>
