--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h3> Hello from github an edit</h3>
 <script>
-console.log("here");
+console.log("here is a change");
 </script>
 </body>
 </html>
