--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 </head>
 <body>
     <h3> Hello from github an edit</h3>
-<script>
-console.log("here is a change");
-</script>
+<script src="main.js"></script>
 </body>
 </html>
