--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a href="https://ric-colasanti.github.io/sandbox/">Sand</a>
 </head>
 <body>
-    <h3> Hello from github an edit</h3>
+    <h3> Hello from github load a file</h3>
 <script src="main.js"></script>
 </body>
 </html>
